--- a/public/styles.css
+++ b/public/styles.css
@@ -1,1 +1,148 @@
+/*styles css index.html */
+/* General styles */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    /*line-height: 1.6;*/
+    height: auto;
+}
 
+header {
+    text-align: center;
+    background: #f4f4f4;
+    padding: 20px;
+}
+
+.logo-container {
+    display: inline-block;
+}
+
+.logo {
+    max-width: 100px;
+}
+
+nav {
+    background: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+section {
+    padding: 15px;
+    text-align: center;
+}
+
+.service {
+    margin-bottom: 20px;
+}
+
+.service img {
+    max-width: 90%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.benefits-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.benefits-container img {
+    max-width: 90%;
+    height: auto;
+    flex: 1 1 45%;
+    border-radius: 5px;
+}
+
+.benefits-content {
+    flex: 1 1 80%;
+    text-align: center;
+}
+
+.benefits-content h5 {
+    font-size: 1.1em;
+    margin-top: 0;
+}
+
+.benefits-content p {
+    margin-bottom: 10px;
+}
+
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    width: 100%;
+    bottom: 0;
+}
+
+#cta {
+    margin-top: 20px;
+}
+#cta button, #contact-form button {
+    background-color: #0073e6;
+    color: white;
+    border: none;
+    width: 80%;
+    padding: 1rem 2rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+#contact-form {
+    padding: 20px;
+    background: white;
+    
+}
+
+#contact-form form {
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+#contact-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+#contact-form input,
+#contact-form textarea {
+    width: 90%;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#contact-form button {
+    display: block;
+    width: 95%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    background: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
