--- a/public/styles.css
+++ b/public/styles.css
@@ -105,7 +105,8 @@ footer {
     background-color: #0073e6;
     color: white;
     border: none;
-    width: 80%;
+    width: 70%;
+    border-radius: 10px;
     padding: 1rem 2rem;
     cursor: pointer;
     font-size: 1rem;
